--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             margin-top: 20px;
         }
     </style>
-    <script src="https://unpkg.com/@vkontakte/vk-bridge"></script> <!-- Подключаем VK Bridge -->
+    <script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script> <!-- Подключаем VK Bridge -->
 </head>
 <body>
     <h1>Викторина</h1>
