--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script> <!-- Подключаем VK Bridge -->
 </head>
 <body>
-    <h1>Викторина</h1>
+    <h1>Молодежный центр карьеры «КУПНО.СТАРТ»</h1>
     <div id="quiz-container">
         <img id="question-image" src="" alt="Вопрос" />
         <div id="answers"></div>
